--- a/index.html
+++ b/index.html
@@ -1,1 +1,43 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Berk Bacalan</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+<body>
+    <div class="container">
+        <div class="navbar">
+            <div class="logo">
+                <a href="#">Logo</a>
+            </div>
+            <ul>
+                <li><a href="#" class="active">Home</a></li>
+                <li><a href="#">About Me</a></li>
+                <li><a href="#">Products</a></li>
+            </ul>
+        </div>
+        <div class="center">
+            <h1>Berk Bacalan</h1>
+            <h2>< Hi, I'm a web and mobile developer. My basic principles in development are to design user-friendly and useful applications.></h2>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <div class="buttons">
+                <h2>WorDict</h3>
+                <h3>WorDict is a word game without internet usage. You may try to find words according to its meanings. WorDict is completely free.</h5>
+                <a href="#" style="text-decoration: none; color: aliceblue;" class="fa fa-android"></a>&nbsp; <a href="https://apps.apple.com/az/app/word-game-kelime-bilgisi/id1616335539" style="text-decoration: none; color: aliceblue;" class="fa fa-apple"></a>
+                <h2>Barcode Scanner Pro</h2>
+                <h3>You can scan an area or surface in any image, both as an image and as a PDF document. It also allows you to read QR and barcodes. </h3>
+                <a href="#" style="text-decoration: none; color: aliceblue;" class="fa fa-android"></a>&nbsp; <a href="#" style="text-decoration: none; color: aliceblue;" class="fa fa-apple"></a><h3>Coming Soon...</h3>
+            </div>
+        </div>
+    </div>
+    
+</body>
+</html>
