--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="navbar">
             <div class="logo">
-                <a href="#">Logo</a>
+                <a href="#"><ß> Games&Apps</a>
             </div>
             <ul>
                 <li><a href="#" class="active">Home</a></li>
