--- a/products.html
+++ b/products.html
@@ -9,6 +9,9 @@
     <link rel="icon" type="image/x-icon" href="/favicon.ico" href="index.html">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    
+
+
 </head>
 <body>
     <div class="container">
@@ -25,10 +28,12 @@
         <div class="center">
             <h2>WorDict</h2>
             <h3>WorDict is a word game without internet usage. You may try to find words according to its meanings. WorDict is completely free.</h3>
-            <a href="#" style="text-decoration: none; color: aliceblue;" class="fa fa-android"></a>&nbsp; <a href="https://apps.apple.com/az/app/word-game-kelime-bilgisi/id1616335539" style="text-decoration: none; color: aliceblue;" class="fa fa-apple"></a>
+                <a href="#" style="text-decoration: none; color: aliceblue;" class="fa fa-android"></a>&nbsp; <a href="https://apps.apple.com/az/app/word-game-kelime-bilgisi/id1616335539" style="text-decoration: none; color: aliceblue;" class="fa fa-apple"></a><br>
+                <a href="wordict-terms.html" style="color: aliceblue; font-weight: bold;">Terms&Conditions</a> &nbsp; <a href="wordict-pp.html" style="color: aliceblue; font-weight: bold;">Privacy Policy</a>
             <h2>Barcode Scanner Pro</h2>
                 <h3>You can scan an area or surface in any image, both as an image and as a PDF document. It also allows you to read QR and barcodes. </h3>
                 <a href="#" style="text-decoration: none; color: aliceblue;" class="fa fa-android"></a>&nbsp; <a href="#" style="text-decoration: none; color: aliceblue;" class="fa fa-apple"></a><h3>Coming Soon...</h3>
+                <a href="anyscanner-terms.html" style="color: aliceblue; font-weight: bold;">Terms&Conditions</a> &nbsp; <a href="anyscanner-pp.html" style="color: aliceblue; font-weight: bold;">Privacy Policy</a>
         </div>
     </div>
     
