--- a/products.html
+++ b/products.html
@@ -3,8 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Berk Bacalan</title>
     <link rel="icon" type="image/x-icon" href="/favicon.ico" href="index.html">
     <link rel="stylesheet" href="style.css">
@@ -30,7 +28,7 @@
             <h3>WorDict is a word game without internet usage. You may try to find words according to its meanings. WorDict is completely free.</h3>
                 <a href="#" style="text-decoration: none; color: aliceblue;" class="fa fa-android"></a>&nbsp; <a href="https://apps.apple.com/az/app/word-game-kelime-bilgisi/id1616335539" style="text-decoration: none; color: aliceblue;" class="fa fa-apple"></a><br>
                 <a href="wordict-terms.html" style="color: aliceblue; font-weight: bold;">Terms&Conditions</a> &nbsp; <a href="wordict-pp.html" style="color: aliceblue; font-weight: bold;">Privacy Policy</a>
-            <h2>Barcode Scanner Pro</h2>
+            <h2>AnyScanner</h2>
                 <h3>You can scan an area or surface in any image, both as an image and as a PDF document. It also allows you to read QR and barcodes. </h3>
                 <a href="#" style="text-decoration: none; color: aliceblue;" class="fa fa-android"></a>&nbsp; <a href="#" style="text-decoration: none; color: aliceblue;" class="fa fa-apple"></a><h3>Coming Soon...</h3>
                 <a href="anyscanner-terms.html" style="color: aliceblue; font-weight: bold;">Terms&Conditions</a> &nbsp; <a href="anyscanner-pp.html" style="color: aliceblue; font-weight: bold;">Privacy Policy</a>
