--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
             <h3>< I am currently working as a professional backend developer. I also develop mobile applications and games individually with Flutter. ></h3>
             <h3>< Every day I work on new and simple applications that solve people's problems. ></h3>
             <h3>< If you have used any of these applications, do not hesitate to give feedback. ></h3>
-            <a href="https://twitter.com/berkbacalan" style="text-decoration: none; color: aliceblue;" class="fa fa-twitter"></a>&nbsp; <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=berkbacalan@gmail.com&body=Tell me good things..." style="text-decoration: none; color: aliceblue;" class="fa fa-google"></a>&nbsp;<a href="https://www.linkedin.com/in/berkbacalan" style="text-decoration: none; color: aliceblue;" class="fa fa-linkedin"></a>
+            <a href="https://twitter.com/berkbacalan" style="text-decoration: none; color: aliceblue;" class="fa fa-twitter"></a>&nbsp; &nbsp;<a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=bbbappsandgames@gmail.com&body=Tell me good things..."><i class="fa fa-envelope-o fa-lg" style="color: aliceblue;"></i></a>&nbsp; &nbsp;<a href="https://www.linkedin.com/in/berkbacalan" style="text-decoration: none; color: aliceblue;" class="fa fa-linkedin"></a>
         </div>
     </div>
     
