Update policies and terms

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <div class="navbar">
             <div class="logo">
-                <a href="#"><ß> Games&Apps</a>
+                <a href="#">Berk Bacalan Software</a>
             </div>
             <ul>
                 <li><a href="#" class="active">Home</a></li>
