--- a/products.html
+++ b/products.html
@@ -17,7 +17,7 @@
     <div class="container">
         <div class="navbar">
             <div class="logo">
-                <a href="#"><ß> Games&Apps</a>
+                <a href="#">Berk Bacalan Software</a>
             </div>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -30,7 +30,7 @@
             <h3>WorDict is a word game without internet usage. You may try to find words according to its meanings. WorDict is completely free.</h3>
                 <a href="#" style="text-decoration: none; color: aliceblue;" class="fa fa-android"></a>&nbsp; <a href="https://apps.apple.com/az/app/word-game-kelime-bilgisi/id1616335539" style="text-decoration: none; color: aliceblue;" class="fa fa-apple"></a><br>
                 <a href="wordict-terms.html" style="color: aliceblue; font-weight: bold;">Terms&Conditions</a> &nbsp; <a href="wordict-pp.html" style="color: aliceblue; font-weight: bold;">Privacy Policy</a>
-            <h2>Barcode Scanner Pro</h2>
+            <h2>AnyScanner</h2>
                 <h3>You can scan an area or surface in any image, both as an image and as a PDF document. It also allows you to read QR and barcodes. </h3>
                 <a href="#" style="text-decoration: none; color: aliceblue;" class="fa fa-android"></a>&nbsp; <a href="#" style="text-decoration: none; color: aliceblue;" class="fa fa-apple"></a><h3>Coming Soon...</h3>
                 <a href="anyscanner-terms.html" style="color: aliceblue; font-weight: bold;">Terms&Conditions</a> &nbsp; <a href="anyscanner-pp.html" style="color: aliceblue; font-weight: bold;">Privacy Policy</a>
