--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     <div class="container">
         <div class="navbar">
             <div class="logo">
-                <a href="#"><ß> Games&Apps</a>
+                <a href="#">Berk Bacalan Software</a>
             </div>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -23,10 +23,11 @@
             </ul>
         </div>
         <div class="center">
-            <h3>< Hi, My name is Berk Bacalan. I am a backend developer experienced with Python and its frameworks.></h3>
-            <h3>< I am currently working as a professional backend developer. I also develop mobile applications and games individually with Flutter. ></h3>
+            <h3>< Hi, My name is Berk Bacalan. I am a software engineer experienced in back end development.></h3>
+            <h3>< I am currently working as a professional software engineer. I also develop mobile applications and games individually with Flutter. ></h3>
             <h3>< Every day I work on new and simple applications that solve people's problems. ></h3>
             <h3>< If you have used any of these applications, do not hesitate to give feedback. ></h3>
+            <h3>< You may also reach me about your projects. ></h3>
             <a href="https://twitter.com/berkbacalan" style="text-decoration: none; color: aliceblue;" class="fa fa-twitter"></a>&nbsp; <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=berkbacalan@gmail.com&body=Tell me good things..." style="text-decoration: none; color: aliceblue;" class="fa fa-google"></a>&nbsp;<a href="https://www.linkedin.com/in/berkbacalan" style="text-decoration: none; color: aliceblue;" class="fa fa-linkedin"></a>
         </div>
     </div>
