Update design and contents

--- a/about.html
+++ b/about.html
@@ -2,33 +2,37 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0"/>
     <title>Berk Bacalan</title>
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://use.fontawesome.com/d1341f9b7a.js"></script>
 </head>
 <body>
-    <div class="container">
-        <div class="navbar">
-            <div class="logo">
-                <a href="#">Berk Bacalan Software</a>
-            </div>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html" class="active">About Me</a></li>
-                <li><a href="products.html">Products</a></li>
-            </ul>
-        </div>
-        <div class="center">
-            <h3>< Hi, My name is Berk Bacalan. I am a software engineer experienced in back end development.></h3>
-            <h3>< I am currently working as a professional software engineer. I also develop mobile applications and games individually with Flutter. ></h3>
-            <h3>< Every day I work on new and simple applications that solve people's problems. ></h3>
-            <h3>< If you have used any of these applications, do not hesitate to give feedback. ></h3>
-            <h3>< You may also reach me about your projects. ></h3>
-            <a href="https://twitter.com/berkbacalan" style="text-decoration: none; color: aliceblue;" class="fa fa-twitter"></a>&nbsp; <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=berkbacalan@gmail.com&body=Tell me good things..." style="text-decoration: none; color: aliceblue;" class="fa fa-google"></a>&nbsp;<a href="https://www.linkedin.com/in/berkbacalan" style="text-decoration: none; color: aliceblue;" class="fa fa-linkedin"></a>
-        </div>
+    <div class="navbar">
+        <ul>
+            <li><a href="index.html" style="font-weight: bold; font-family: monospace; color: #000;">Home</a></li>
+            <li><a href="about.html" class="active" style="font-family: monospace; font-weight: bold; color: #000;">About Me</a></li>
+            <li><a href="products.html" style="font-family: monospace; color: #000; font-weight: bold;">Products</a></li>
+        </ul>
     </div>
-    
+    <div class="box">
+        <img src="profile.jpeg" alt="" class="box-img">
+        <h1 style="font-family: monospace;">
+      Berk Bacalan</h1>
+      <h5>
+      Web&Mobile Devloper</h5>
+      <p style="font-family: monospace;">
+        Hi, My name is Berk Bacalan. I am a software engineer experienced in back end development
+        I am currently working as a professional software engineer. I also develop mobile applications and games individually with Flutter.
+        Every day I work on new and simple applications that solve people's problems.
+        If you have used any of these applications, do not hesitate to give feedback.
+        You may also reach me about your projects. </p>
+      <ul>
+      <li><a href="https://www.linkedin.com/in/berkbacalan"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+      <li><a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=berkbacalan@gmail.com&body=Tell me good things..."><i class="fa fa-envelope"></i></a></li>
+      </ul>
+      </div>
 </body>
 </html>
