--- a/products.html
+++ b/products.html
@@ -1,39 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0"/>
     <title>Berk Bacalan</title>
     <link rel="icon" type="image/x-icon" href="/favicon.ico" href="index.html">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
 
 
 </head>
+
 <body>
     <div class="container">
         <div class="navbar">
-            <div class="logo">
-                <a href="#">Berk Bacalan Software</a>
-            </div>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Me</a></li>
-                <li><a href="products.html" class="active">Products</a></li>
+                <li><a href="index.html" style="font-weight: bold; font-family: monospace; color: #000;">Home</a></li>
+                <li><a href="about.html" style="font-family: monospace; font-weight: bold; color: #000;">About Me</a></li>
+                <li><a href="products.html" class="active" style="font-family: monospace; color: #000; font-weight: bold;">Products</a></li>
             </ul>
         </div>
-        <div class="center">
-            <h2>WorDict</h2>
-            <h3>WorDict is a word game without internet usage. You may try to find words according to its meanings. WorDict is completely free.</h3>
-                <a href="https://play.google.com/store/apps/details?id=com.berkbacalan.wordgame" style="text-decoration: none; color: aliceblue;" class="fa fa-android"></a>&nbsp; <a href="https://apps.apple.com/az/app/word-game-kelime-bilgisi/id1616335539" style="text-decoration: none; color: aliceblue;" class="fa fa-apple"></a><br>
-                <a href="wordict-terms.html" style="color: aliceblue; font-weight: bold;">Terms&Conditions</a> &nbsp; <a href="wordict-pp.html" style="color: aliceblue; font-weight: bold;">Privacy Policy</a>
-            <h2>AnyScanner</h2>
-                <h3>You can scan an area or surface in any image, both as an image and as a PDF document. It also allows you to read QR and barcodes. </h3>
-                <a href="#" style="text-decoration: none; color: aliceblue;" class="fa fa-android"></a>&nbsp; <a href="#" style="text-decoration: none; color: aliceblue;" class="fa fa-apple"></a><h3>Coming Soon...</h3>
-                <a href="anyscanner-terms.html" style="color: aliceblue; font-weight: bold;">Terms&Conditions</a> &nbsp; <a href="anyscanner-pp.html" style="color: aliceblue; font-weight: bold;">Privacy Policy</a>
+        <div class="center-box-no-border">
+            <div class="b">
+                <h1 style="font-family: monospace; font-size: 150%;">[Game]</h2>
+                <h1 style="font-family: monospace;">WorDict</h1>
+                <h3 style="font-weight: bold; font-family: monospace;">Free</h3>
+                <h3 style="font-family: monospace;">WorDict is a word game without internet usage. You may try to find words according to its meanings.
+                    WorDict is completely free.</h3>
+                <a href="https://play.google.com/store/apps/details?id=com.berkbacalan.wordgame"
+                    style="text-decoration: none; color: rgb(0, 0, 0); font-size: xx-large;" class="fa fa-android"></a>&nbsp; <a
+                    href="https://apps.apple.com/az/app/word-game-kelime-bilgisi/id1616335539"
+                    style="text-decoration: none; color: rgb(0, 0, 0); font-size: xx-large;" class="fa fa-apple"></a><br><br>
+                <a href="wordict-terms.html" style="color: rgb(0, 0, 0); font-weight: bold; font-family: monospace;">Terms&Conditions</a><br>
+                <a href="wordict-pp.html" style="color: rgb(0, 0, 0); font-weight: bold; font-family: monospace;">Privacy Policy</a>
+            </div>
+            <div class="b">
+                <h1 style="font-family: monospace; font-size: 150%;">[Utilization, Efficiency]</h2>
+                <h1 style="font-family: monospace;">AnyScanner</h1><h3 style="font-weight: bold; font-family: monospace;">Free</h3>
+                <h3 style="font-family: monospace;">You can scan an area or surface in any image, both as an image and as a PDF document. AnyScanner" also allows
+                    you to read QR and barcodes. </h3>
+                <!-- <a href="#" style="text-decoration: none; color: rgb(0, 0, 0); font-size: xx-large;" class="fa fa-android"></a>&nbsp;  -->
+                <a href="https://apps.apple.com/us/app/anyscanner/id1658302219" style="text-decoration: none; color: rgb(0, 0, 0); font-size: xx-large;" class="fa fa-apple"></a>
+                <h5>Play Store Coming Soon...</h5>
+                <a href="anyscanner-terms.html" style="color: rgb(0, 0, 0); font-weight: bold; font-family: monospace;">Terms&Conditions</a><br>
+                <a href="anyscanner-pp.html" style="color: rgb(0, 0, 0); font-weight: bold; font-family: monospace;">Privacy Policy</a>
+            </div>
         </div>
     </div>
-    
+
 </body>
 </html>
