--- a/index.html
+++ b/index.html
@@ -1,31 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Berk Bacalan</title>
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0"/>
+    <script src="https://use.fontawesome.com/d1341f9b7a.js"></script>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-</head>
-<body>
-    <div class="container">
-        <div class="navbar">
-            <div class="logo">
-                <a href="#">Berk Bacalan Software</a>
-            </div>
-            <ul>
-                <li><a href="#" class="active">Home</a></li>
-                <li><a href="about.html">About Me</a></li>
-                <li><a href="products.html">Products</a></li>
-            </ul>
-        </div>
-        <div class="center">
-            <h1>Berk Bacalan</h1>
-            <h2>< Hi, I'm a web and mobile developer. My basic principles in development are to design user-friendly and useful applications.></h2>
-            
-        </div>
+    <title>Berk Bacalan</title>
+  </head>
+  <body>
+    <div class="navbar">
+        <ul>
+            <li><a href="index.html" class="active" style="font-weight: bold; font-family: monospace; color: #000;">Home</a></li>
+            <li><a href="about.html" style="font-family: monospace; font-weight: bold; color: #000;">About Me</a></li>
+            <li><a href="products.html" style="font-family: monospace; color: #000; font-weight: bold;">Products</a></li>
+        </ul>
     </div>
-    
+    <div class="center-box-no-border">
+        <h2 align="center" style="font-family: monospace; font-size: 200%">
+            Hi, I'm Berk Bacalan 👋
+        </h2>
+        <p align="center" style="font-family: monospace; font-weight: bold; font-size: 120%;">I help designers, small agencies and businesses bring their ideas to life. 
+            Powered by Django, VS Code and coffee, I turn your requirements into CMS-ified and ecommerce-ified websites -
+             on time and
+             on budget.</p><br>
+        <p align="center" style="font-family: monospace; font-weight: bold; font-size: 120%;">
+            I work on monoliths, micro-services and serverless solutions.
+        </p>
+        <p align="center" style="font-family: monospace; font-weight: bold; font-size: 120%;">
+            Got any questions?&nbsp;<a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=berkbacalan@gmail.com&body=Hello Berk,">Contact Me</a>
+        </p>
+    </div>
 </body>
 </html>
