--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
         <h1 style="font-family: monospace;">
       Berk Bacalan</h1>
       <h5>
-      Web&Mobile Devloper</h5>
+      Web&Mobile Developer</h5>
       <p style="font-family: monospace;">
         Hi, My name is Berk Bacalan. I am a software engineer experienced in back end development
         I am currently working as a professional software engineer. I also develop mobile applications and games individually with Flutter.
