--- a/index.html
+++ b/index.html
@@ -304,6 +304,26 @@
             >
           </div>
           <div class="col container">
+            <h5 style="font-family: monospace">[Utilization, Efficiency]</h5>
+            <img class="rounded-5 h-25" src="https://is1-ssl.mzstatic.com/image/thumb/Purple221/v4/f6/84/31/f6843173-656a-e72b-87ff-e89ad17dd99a/AppIcon-0-0-1x_U007emarketing-0-10-0-0-85-220.png/230x0w.png" alt=""><h1 style="font-family: monospace">AnyScanner</h1>
+            <h5 style="font-family: monospace">
+              Better, faster, more user-friendly. Next gen of AnyScanner. + Premium options without ads.
+            </h5>
+            <a
+              href="https://apps.apple.com/tr/app/anyscanner-pro/id6502211573"
+              style="text-decoration: none; font-size: xx-large"
+              class="bi bi-apple text-white"
+            ></a>
+            <p>Play Store Coming Soon...</p>
+            <a href="anyscanner-terms.html" class="font-monospace text-info"
+              >Terms&Conditions</a
+            >
+            <br />
+            <a href="anyscanner-pro-pp.html" class="font-monospace text-info"
+              >Privacy Policy</a
+            >
+          </div>
+          <div class="col container">
             <h5 style="font-family: monospace">[Game]</h5>
             <img class="rounded-5 h-25" src="https://is2-ssl.mzstatic.com/image/thumb/Purple122/v4/ba/33/5f/ba335f63-9833-347b-44f5-895b5a43d550/AppIcon-1x_U007emarketing-0-10-0-0-85-220.png/246x0w.png" alt=""><h1 style="font-family: monospace">WorDict</h1>
             <h5 class="font-monospace">
