--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
           </div>
           <div class="col container">
             <h5 style="font-family: monospace">[Utilization, Efficiency]</h5>
-            <img class="rounded-5 h-25" src="https://is1-ssl.mzstatic.com/image/thumb/Purple221/v4/f6/84/31/f6843173-656a-e72b-87ff-e89ad17dd99a/AppIcon-0-0-1x_U007emarketing-0-10-0-0-85-220.png/230x0w.png" alt=""><h1 style="font-family: monospace">AnyScanner</h1>
+            <img class="rounded-5 h-25" src="https://is1-ssl.mzstatic.com/image/thumb/Purple221/v4/f6/84/31/f6843173-656a-e72b-87ff-e89ad17dd99a/AppIcon-0-0-1x_U007emarketing-0-10-0-0-85-220.png/230x0w.png" alt=""><h1 style="font-family: monospace">AnyScanner Pro</h1>
             <h5 style="font-family: monospace">
               Better, faster, more user-friendly. Next gen of AnyScanner. + Premium options without ads.
             </h5>
