--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
 
     <div id="about" class="container text-center" style="min-height: 100vh;">
         <div class="row justify-content-center">
-            <div class="col-12 col-md-6">
-                <img src="profile.jpeg" alt="..." class="img-fluid img-thumbnail rounded-5" />
-            </div>
-        </div>
+    <div class="col-12 col-md-6 d-flex justify-content-center">
+        <img src="profile.jpeg" alt="..." class="img-fluid img-thumbnail rounded-5" style="max-width: 150px;" />
+    </div>
+</div>
         <div class="row text-white text-center justify-content-center mt-4">
             <h1 style="font-family: monospace">Berk Bacalan</h1>
             <h4 style="font-family: monospace">Web&Mobile Developer</h4>
