--- a/index.html
+++ b/index.html
@@ -142,6 +142,32 @@
             align-items: center;
             background: linear-gradient(135deg, var(--gradient-start) 0%, var(--gradient-end) 100%);
             color: white;
+            padding: 80px 0;
+        }
+
+        @media (max-width: 991.98px) {
+            .hero-section {
+                text-align: center;
+                padding: 120px 0 60px;
+            }
+
+            .hero-section .col-lg-6:first-child {
+                margin-bottom: 40px;
+            }
+
+            .hero-section img {
+                max-width: 250px !important;
+                margin: 0 auto;
+            }
+
+            .hero-section .d-flex {
+                justify-content: center;
+            }
+
+            .hero-section .btn {
+                padding: 0.8rem 1.5rem;
+                font-size: 1rem;
+            }
         }
 
         .skill-card {
@@ -154,6 +180,11 @@
 
         .skill-card:hover {
             transform: translateY(-5px);
+        }
+
+        .skill-card .d-flex {
+            justify-content: center;
+            gap: 1rem;
         }
 
         .experience-card {
@@ -181,8 +212,12 @@
 
         .tech-stack-icon {
             font-size: 2.5rem;
-            margin: 10px;
             color: var(--text-color);
+            transition: transform 0.3s ease;
+        }
+
+        .tech-stack-icon:hover {
+            transform: scale(1.1);
         }
 
         .card {
