--- a/spendyai-tc.html
+++ b/spendyai-tc.html
@@ -632,6 +632,59 @@
     <p>Si vous avez des questions sur ces Conditions Générales, vous pouvez nous contacter à : berkbacalan@gmail.com</p>
   </div>
 
+
+  <div id="terms-zh" class="terms-section">
+    <h2>服务条款</h2>
+    <p>最后更新：2025年7月17日</p>
+    <p>在使用我们的服务之前，请仔细阅读这些服务条款。</p>
+    <h2>释义与定义</h2>
+    <h3>释义</h3>
+    <p>首字母大写的词语在下列条件下具有特定含义。</p>
+    <p>以下定义在单数或复数情况下具有相同含义。</p>
+    <h3>定义</h3>
+    <p>在本服务条款中：</p>
+    <ul>
+      <li><strong>应用程序</strong>指由公司提供并由您在任何电子设备上下载的软件程序，名称为 SpendyAI。</li>
+      <li><strong>应用商店</strong>指由 Apple Inc.（Apple App Store）或 Google Inc.（Google Play Store）运营和开发的数字分发服务，应用程序即在此下载。</li>
+      <li><strong>公司</strong>（在本协议中称为"公司"、"我们"或"我们的"）指 SpendyAI。</li>
+      <li><strong>国家</strong>指：土耳其</li>
+      <li><strong>设备</strong>指可访问服务的任何设备，如计算机、手机或平板电脑。</li>
+      <li><strong>服务</strong>指应用程序。</li>
+      <li><strong>服务条款</strong>（亦称"条款"）指本服务条款，构成您与公司之间关于使用服务及通过其进行的任何购买的完整协议。</li>
+      <li><strong>您</strong>指访问或使用服务的个人，或该个人代表的公司或其他法律实体（如适用）。</li>
+    </ul>
+    <h2>接受</h2>
+    <p>这些是规范您使用本服务及通过其进行的任何购买的服务条款，并构成您与公司之间的协议。本服务条款规定了所有用户在使用服务时的权利和义务。</p>
+    <p>您访问和使用服务需接受并遵守本服务条款。本服务条款适用于所有访问或使用服务的访客、用户及其他人。</p>
+    <p>通过访问或使用服务，您同意受本服务条款的约束。如果您不同意本服务条款的任何部分，则不得访问服务。</p>
+    <p>您声明您已年满13岁。公司不允许13岁以下者使用本服务。</p>
+    <p>您访问和使用服务还需接受并遵守公司的隐私政策。</p>
+    <h2>应用内购买</h2>
+    <p>应用程序可能包含通过应用内购买（"应用内购买"）获得的某些功能或内容。应用内购买可能包括访问高级功能、无广告体验、扩展使用或其他数字内容。</p>
+    <p>所有应用内购买均通过您最初下载应用程序的应用商店处理。这意味着付款由 Apple App Store 或 Google Play Store 处理，并受其条款和支付政策约束。</p>
+    <p>您知晓并同意：</p>
+    <ul>
+      <li>所有账单和交易均由应用商店处理。</li>
+      <li>我们不控制也不负责与应用商店相关的支付处理或退款政策。</li>
+      <li>所有购买均为最终且不可退款，除非法律或应用商店政策要求。</li>
+      <li>您有责任通过应用商店账户设置管理您的订阅，包括取消或修改。</li>
+    </ul>
+    <p>某些功能可能以订阅方式提供。如是，除非您在计费周期结束前取消订阅，否则将自动续订，并根据所选方案和商店政策再次收费。</p>
+    <p>如对应用内购买有任何疑问，请直接联系应用商店。</p>
+    <h2>终止</h2>
+    <p>如您违反本服务条款，包括但不限于，我们可立即终止或暂停您的访问，无需事先通知或承担责任。</p>
+    <p>如发现与应用内购买相关的欺诈或未经授权的支付活动，也可暂停或终止访问。</p>
+    <h2>责任限制</h2>
+    <p>在适用法律允许的最大范围内，公司或其供应商对因您使用服务而引起或与之相关的任何特殊、偶发、间接或后果性损害不承担任何责任。</p>
+    <h2>适用法律</h2>
+    <p>国家法律（不包括其法律冲突规则）适用于本条款及您对服务的使用。</p>
+    <h2>服务条款的变更</h2>
+    <p>我们保留在任何时候自行决定修改或替换本条款的权利。</p>
+    <h2>联系我们</h2>
+    <p>如对本服务条款有任何疑问，您可通过以下方式联系我们：berkbacalan@gmail.com</p>
+  </div>
+
+
   <script>
     const langSelect = document.getElementById('lang-select');
     const sections = document.querySelectorAll('.terms-section');
