--- a/spendyai-pp.html
+++ b/spendyai-pp.html
@@ -131,7 +131,7 @@
     </ul>
   </div>
 
-  <div id="policy-en" class="policy-section">
+  <div id="policy-en" class="policy-section active">
     <h1>Privacy Policy</h1>
     <p>Last updated: July 17, 2025</p>
     <p>This Privacy Policy describes our policies and procedures on the collection, use, and disclosure of your information when you use the Service and informs you about your privacy rights and how the law protects you.</p>
