--- a/index.html
+++ b/index.html
@@ -439,18 +439,18 @@
                         <img src="https://is5-ssl.mzstatic.com/image/thumb/Purple126/v4/6e/e0/4c/6ee04c6c-8166-a40c-68b3-2f34c8bad49b/AppIcon-0-0-1x_U007emarketing-0-0-0-10-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/246x0w.png" class="card-img-top" alt="AnyScanner">
                         <div class="card-body">
                             <h3>AnyScanner</h3>
-                            <p class="card-text">Document scanning app with QR/barcode support, used by 20,000+ users.</p>
+                            <p class="card-text">Document scanning app with QR/barcode support, used by 40,000+ users.</p>
                             <a href="https://apps.apple.com/us/app/anyscanner/id1658302219" class="btn btn-primary">View on App Store</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="card">
-                        <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple221/v4/f6/84/31/f6843173-656a-e72b-87ff-e89ad17dd99a/AppIcon-0-0-1x_U007emarketing-0-10-0-0-85-220.png/246x0w.png" class="card-img-top" alt="AnyScanner Pro">
+                        <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple221/v4/1b/36/1d/1b361dbf-b014-2a51-f2ca-c0a0b222f909/AppIcon-0-0-1x_U007emarketing-0-11-0-85-220.png/230x0w.png" class="card-img-top" alt="Spendy AI">
                         <div class="card-body">
-                            <h3>AnyScanner Pro</h3>
-                            <p class="card-text">Premium document scanning solution with advanced features.</p>
-                            <a href="https://apps.apple.com/tr/app/anyscanner-pro/id6502211573" class="btn btn-primary">View on App Store</a>
+                            <h3>Spendy AI</h3>
+                            <p class="card-text">Smart finance management app with automated expense tracking.</p>
+                            <a href="https://apps.apple.com/tr/app/spendy-ai-budget/id6747646869?l=tr" class="btn btn-primary">View on App Store</a>
                         </div>
                     </div>
                 </div>
