--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                     <h2 class="h3 mb-4">Senior Software Development Engineer</h2>
                     <p class="lead mb-4">
                         Experienced software engineer specializing in backend development, microservices architecture, 
-                        and cloud solutions. Currently working at TOM Digital Bank, leading digital onboarding initiatives 
+                        and cloud solutions. Currently working at TOM Digital Bank, maintaining digital onboarding initiatives 
                         and third-party integrations.
                     </p>
                     <div class="d-flex gap-3">
@@ -344,7 +344,7 @@
                         <h3>Senior Software Development Engineer</h3>
                         <h4 class="text-primary">TOM Digital Bank A.Ş.</h4>
                         <ul>
-                            <li>Leading digital onboarding team for customer acquisition</li>
+                            <li>Maintaining digital onboarding for customer acquisition and smooth onboarding process</li>
                             <li>Managing third-party legal office integrations</li>
                             <li>Implementing Kibana enhancements for monitoring</li>
                         </ul>
